--- a/Project1/CMakeLists.txt
+++ b/Project1/CMakeLists.txt
@@ -4,4 +4,4 @@ project(Project1)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES nfa2dfa.cpp)
-add_executable(Project1 ${SOURCE_FILES})
+add_executable(nfa2dfa nfa2dfa.cpp)
