--- a/Project2/html2latex/Makefile
+++ b/Project2/html2latex/Makefile
@@ -22,7 +22,9 @@ html2latex: html2latex.lex.o
 %.pdf: %.tex
 	pdflatex $<
 
-test: html2latex test2.pdf
+test: html2latex test.pdf
+test1: html2latex test1.pdf
+test2: html2latex test2.pdf
 
 clean:
 	$(RM) *.o
